# azure-spn-portal

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  pyproject.toml  spec.md
docs/: api-testing.md  code-design.md  cost-estimate.md  frontend-local-dev.md  local-auth-testing.md
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  router.ts
frontend/src/api/: client.ts  owners.ts  secrets.ts  spns.ts  types.ts
frontend/src/auth/: msalConfig.ts
frontend/src/components/: ConfirmDialog.tsx  OwnerList.tsx  SecretList.tsx  SecretRevealModal.tsx  SpnForm.tsx  SpnList.tsx
frontend/src/lib/: utils.ts
frontend/src/mocks/: data.ts  handlers.ts
frontend/src/routes/: __root.tsx  index.tsx
function_app/: function_app.py  host.json  local.settings.example.json  requirements.txt
function_app/blueprints/: health_blueprint.py  owner_blueprint.py  secret_blueprint.py  spn_blueprint.py
function_app/core/: auth.py  config.py  decorators.py  error_handler.py  exceptions.py  logging_util.py  request_helpers.py
function_app/models/: __init__.py  audit.py  owner.py  secret.py  spn.py
function_app/services/: audit_service.py  cosmos_service.py  graph_service.py  keyvault_service.py
function_app/tests/: conftest.py  test_audit_service.py  test_cosmos_service.py  test_keyvault_service.py  test_models.py  test_owner_blueprint.py  test_secret_blueprint.py  test_spn_blueprint.py
terraform/environments/dev/: backend.tf  main.tf  terraform.tfvars  variables.tf
terraform/environments/prod/: backend.tf  (+3 more)
(+36 files in other folders)
